# test_fork

./: .gitignore  README.md  example_full.aux  example_full.tex  examstylo.sty  make_test.py  pyproject.toml  question_file.tex  the_test.aux
examstylo/example/: example_simple.tex
src/: make_test.py  question_file.tex  test.py
src/package_name/: __main__.py  file.py  question.py  question_options.py  test.py
templates/: template_examstylo.tex
