[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "package_name_USERNAME"
version = "0.0.2"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/nathgrin/testgeneration/issues"